sonarqube-provisioning/kustomize-provisioning/base/postgres-dc.yaml
apiVersion: apps.openshift.io/v1 
kind: DeploymentConfig
metadata:
  labels:
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  name: postgresql-sonarqube
spec:
  replicas: 1
  selector:
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  strategy:
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarqube
        deploymentconfig: postgresql-sonarqube
    spec:
      containers:
        - name: postgresql
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -i
                - -c
                - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-sonarqube
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgresql-sonarqube
          persistentVolumeClaim:
            claimName: postgresql-sonarqube
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:12-el8
          namespace: openshift
      type: ImageChange
