sonarqube-provisioning/kustomize-provisioning/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-sonarqube
  labels:
    app: sonarqube
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  sessionAffinity: None
  type: ClusterIP
