sonarqube-provisioning/kustomize-provisioning/base/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-0.1.1
    release: sonarqube
    heritage: Helm
    target: jobsonarqube

spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: sonarqube
