sonarqube-provisioning/kustomize-provisioning/base/sonar-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: sonarqube
  labels:
    app: sonarqube
spec:
  host: 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http
  to:
    kind: Service
    name: sonarqube-sonarqube
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
